--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ h1{
     height: 420px;
     justify-content: space-around;
     width: 200px;
+    border: 2px solid var(--color-violet);
 }
 button{
     background-color: var(--color-gray);
@@ -59,7 +60,7 @@ button{
     width: 150px;
 }
 
-#color-picker{
+#colorPicker{
     display: block;
     outline: none;
     border: none;
@@ -71,6 +72,7 @@ button{
 }
 /* Canvas */
 .canvas-wrapper{
+    border: 2px solid var(--color-violet);
     align-items: center;
     background-color: var(--color-black);
     border-radius: 10px;
@@ -80,10 +82,17 @@ button{
     justify-content: center;
     width: 420px;
 }
-.canvas{
+
+#canvas{
     background-color: var(--color-gray);
     height: 400px;
     width: 400px;
-    background-color: white;
-    display: grid;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+/* Classes added by the script */
+
+.gridLines{
+    border: 1px solid var(--color-gray);
 }
