--- a/style.css
+++ b/style.css
@@ -94,5 +94,10 @@ button{
 /* Classes added by the script */
 
 .gridLines{
-    border: 1px solid var(--color-gray);
+    border-right: 1px solid var(--color-gray);
+    border-bottom: 1px solid var(--color-gray);
+}
+.toggleOn{
+    background-color: var(--color-violet);
+    color: var(--color-gray);
 }
